изменено:      .config/i3/config 	изменено:      .config/picom/picom.conf

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,17 +1,6 @@
 #################################
 #           Animations         #
 #################################
-animations = ({
-    triggers = [ "open", "show" ];
-    preset = "fly-in";
-    duration = 0.25;
-    directions = "down";
-}, {
-    triggers = [ "close", "hide" ];
-    preset = "fly-out";
-    duration = 0.25;
-    directions = "up";
-});
 
 #################################
 #             Shadows           #
@@ -24,7 +13,7 @@ animations = ({
 # Can be set per-window using rules.
 #
 # Default: false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels.
 #
@@ -281,13 +270,39 @@ use-damage = true;
 #
 # See WINDOW RULES section in the man page for how these work.
 rules: ({
+  match = "window_type = 'normal'";
+  animations = ({
+    triggers = [ "open", "show" ];
+    preset = "fly-in";
+    duration = 0.25;
+    directions = "down";
+  }, {
+    triggers = [ "close", "hide" ];
+    preset = "fly-out";
+    duration = 0.25;
+    directions = "up";
+  });
+},
+{
   match = "window_type = 'tooltip'";
   fade = false;
   shadow = true;
   opacity = 0.75;
   full-shadow = false;
+  animations = ({
+    triggers = [ "open", "show" ];
+    preset = "appear";
+    scale = 0.25;
+    duration = 0.2;
+  }, {
+    triggers = [ "close", "hide" ];
+    preset = "disappear";
+    scale = 0.25;
+    duration = 0.2;
+  });
 },
-{ match = "fullscreen";
+{
+  match = "fullscreen";
   opacity = 1.0;
   corner-radius = 0;
   round-borders = 0;
@@ -301,7 +316,8 @@ rules: ({
   corner-radius = 0;
   round-borders = 0;
 },
-{ match = "window_type = 'dock'    || "
+{ 
+  match = "window_type = 'dock'    || "
           "window_type = 'desktop' || "
           "window_type = 'menu' || "
           "window_type = 'dropdown_menu' || "
@@ -322,7 +338,8 @@ rules: ({
   blur-background = false;
   opacity = 1;
 },
-{ match = "name = 'Notification'   || "
+{ 
+  match = "name = 'Notification'   || "
           "class_g = 'Conky'       || "
           "class_g = 'Glava'       || "
           "class_g ?= 'Notify-osd' || "
@@ -330,21 +347,13 @@ rules: ({
           "_GTK_FRAME_EXTENTS@";
   shadow = false;
 },
-# { match = "class_g *?= 'steam_'";
-#   fade = false;
-#   opacity = 1;
-#   shadow = false;
-#   corner-radius = 0;
-#   round-borders = 0;
-#   full-shadow = false;
-#   blur-background = false;
-# },
-{ match = "class_g *?= 'yandex' || "
+{ 
+  match = "class_g *?= 'yandex' || "
           "class_g = 'zen' && argb";
   blur-background = false;
   shadow = false;
   opacity = 1;
-})
+});
 
 # `@include` directive can be used to include additional configuration files.
 # Relative paths are search either in the parent of this configuration file
