--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,21 +8,19 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font pango:monospace 8
-# font pango:Ubuntu 10
-# font pango:JetBrainsMono Nerd Font, "Font Awesome 6 Free Regular" 10
-font pango:Ubuntu Nerd Font, Symbols Nerd Font, Font Awesome 7 Free 11
+font pango:Ubuntu Nerd Font, Symbols Nerd Font, Font Awesome 7 Free 10
 
 # Custom window configuration
 # for_window [class="^.*"] border pixel 3
-new_window pixel 3
-new_float none
-force_focus_wrapping yes
+default_border pixel 2
+default_floating_border none
+focus_wrapping force
 # focus_follows_mouse yes
 
 # Gapps configuration
 smart_gaps off
-gaps inner 4
-gaps outer 4
+gaps inner 2
+gaps outer 2
 
 # HIDE EDGE BORDERS
 # hide_edge_borders none|vertical|horizontal|both|smart|smart_no_gaps
@@ -31,11 +29,7 @@ hide_edge_borders smart
 # Automatic back-and-forth when switching to the current workspace
 workspace_auto_back_and_forth yes
 
-popup_during_fullscreen ignore
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+popup_during_fullscreen smart
 
 #####################################################################################################################
 #################                         Execute applications on startup                           #################
@@ -43,6 +37,9 @@ popup_during_fullscreen ignore
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
+
+# Execute autotiling
+exec --no-startup-id pidof autotiling || autotiling
 
 # Execute xxkb - keyboard switcher/indicator
 exec_always --no-startup-id pidof xxkb || xxkb
@@ -88,7 +85,6 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -195,28 +191,28 @@ set $ws8 8:
 set $ws9 9:
 
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
+bindsym $mod+9 workspace $ws9
+bindsym $mod+0 workspace $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+Shift+1 move container to workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2
+bindsym $mod+Shift+3 move container to workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9
+bindsym $mod+Shift+0 move container to workspace $ws10
 
 bindsym $mod+Control+Left workspace prev
 bindsym $mod+Control+Right workspace next
@@ -269,10 +265,10 @@ bindsym $mod+r mode "resize"
 bar {
         # height 25
         position top
-        # padding 2px
+        padding 2px 0
         strip_workspace_numbers yes
+        binding_mode_indicator yes
         separator_symbol "  "
-        # i3bar_command i3bar --transparency
         # status_command i3blocks
         status_command i3status
         # tray_padding 1
@@ -317,18 +313,19 @@ assign [class="(?i)code"] $ws4
 assign [class="(?i)telegram"] $ws5
 assign [class="(?i)gimp"] $ws6
 assign [class="(?i)vlc|(?i)mpv"] $ws7
-assign [class="(?i)yad.*|^(?i)steam.*|(?i)port.*"] $ws8
+assign [class="(?i)yad.*|^(?i)steam.*|(?i)port-.*"] $ws8
 assign [instance="^(?i)libreoffice|^(?i)soffice"] $ws9
 #assign [class="^libreoffice-startcenter$" instance="^VCLSalFrame.DocumentWindow$"] 9
 
 # Arbitrary commands for specific windows (for_window)
-for_window [class="(?i)yad.*|^(?i)steam.*|^(?i)port.*|^(?i)lgc.*"] floating enable, focus
+for_window [class="(?i)yad.*|^(?i)steam.*|^(?i)port-.*|^(?i)lgc.*"] floating enable, focus
 # for_window [class="URxvt" instance="^spaceterm$"] floating enable, border normal
 # for_window [class="firefox" instance="^mail.google.com$"] floating enable, focus
 for_window [class="(?i)zen"] border none, floating enable, focus, move absolute center
 for_window [class="(?i)yandex*"] floating enable, focus, move absolute center
 for_window [class="(?i)luakit"] border none, floating enable
 for_window [class="(?i)telegram"] floating enable
+for_window [class="(?i)galculator"] floating enable, resize set 680 280, move position center
 for_window [class="(?i)gpicview|(?i)lxappearance|(?i)dunst"] floating enable
 for_window [class="(?i)gimp|(?i)mpv|(?i)nautilus|(?i)nemo|(?i)thunar"] floating enable, focus
 for_window [instance="^(?i)soffice"] floating enable, focus
