изменено:      .config/i3/config 	изменено:      .config/i3status/config

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -29,7 +29,11 @@ hide_edge_borders smart
 # Automatic back-and-forth when switching to the current workspace
 workspace_auto_back_and_forth yes
 
+# Display the popup if it belongs to the fullscreen application only
 popup_during_fullscreen smart
+
+# Tell i3 to delay resetting the urgency state
+force_display_urgency_hint 500 ms
 
 #####################################################################################################################
 #################                         Execute applications on startup                           #################
@@ -306,7 +310,7 @@ client.background       #2E344090
 assign [class="^(?i)kitty$"] $ws1
 # assign [class="^URxvt$" instance="^spaceterm$"] $ws3
 assign [class="(?i)zen|(?i)firefox"] $ws2
-assign [class="(?i)yandex*|(?i)luakit"] $ws2
+assign [class="(?i)yandex.*|(?i)luakit"] $ws2
 assign [class="(?i)nemo|(?i)nautilus|(?i)thunar"] $ws3
 assign [class="(?i)virt-manager"] $ws3
 assign [class="(?i)code"] $ws4
@@ -321,16 +325,18 @@ assign [instance="^(?i)libreoffice|^(?i)soffice"] $ws9
 for_window [class="(?i)yad.*|^(?i)steam.*|^(?i)port-.*|^(?i)lgc.*"] floating enable, focus
 # for_window [class="URxvt" instance="^spaceterm$"] floating enable, border normal
 # for_window [class="firefox" instance="^mail.google.com$"] floating enable, focus
-for_window [class="(?i)zen"] border none, floating enable, focus, move absolute center
-for_window [class="(?i)yandex*"] floating enable, focus, move absolute center
-for_window [class="(?i)luakit"] border none, floating enable
+for_window [class="(?i)zen"] border none, floating enable, focus, move position center
+for_window [class="(?i)yandex.*"] floating enable, focus, move position center
+for_window [class="(?i)luakit"] border none, floating enable, move position center
 for_window [class="(?i)telegram"] floating enable
 for_window [class="(?i)galculator"] floating enable, resize set 680 280, move position center
+for_window [class="(?i).*FileRoller|(?i)xarchiver"] floating enable, resize set 390 455, move position 100 100
 for_window [class="(?i)gpicview|(?i)lxappearance|(?i)dunst"] floating enable
 for_window [class="(?i)gimp|(?i)mpv|(?i)nautilus|(?i)nemo|(?i)thunar"] floating enable, focus
 for_window [instance="^(?i)soffice"] floating enable, focus
 for_window [class="(?i)pavucontrol|(?i)pavumeter|(?i)paman"] floating enable, focus
 for_window [class="^(?i)virt-manager"] floating enable, focus
+for_window [class="^(?i)ghidra.*"] floating enable, focus
 # for_window [instance="(?i)ranger"] move scratchpad
 
 for_window [window_role="pop-up"] floating enable,move absolute center
@@ -395,7 +401,7 @@ bindsym $alt+Shift+Return exec --no-startup-id thunar
 # reboot system, shutdown system or return to the default mode, respectively.
 set $mode_exit Launch: [l]ock [e]xit [r]reboot [s]hutdown
 mode "$mode_exit" {
-    bindsym l exec i3lock -i /usr/share/backgrounds/nordic-wallpapers-git/windows-panic.png, mode "default"
+    bindsym l exec i3lock -i "$HOME/.local/backgrounds/wm-lock.png", mode "default"
     bindsym e exec i3-msg exit
     bindsym r exec systemctl reboot
     bindsym s exec systemctl poweroff
