--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -12,23 +12,24 @@ general {
         output_format = "i3bar" # формат вывода, устанавливаем i3bar (JSON)
 }
 
-# order += "wireless _first_"
+order += "wireless _first_"
 order += "ethernet _first_"
-order += "disk /"
-order += "load"
-order += "memory"
+# order += "disk /"
+# order += "load"
+# order += "memory"
 order += "cpu_usage"
+order += "battery all"
 order += "volume master"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "󰖩 (%quality at %essid) %ip"
-        format_down = "󰖪: down"
+        format_up = "󰖩 %quality %essid"
+        format_down = "󰖪 "
 }
 
 ethernet _first_ {
         format_up = "󰌘 %ip"
-        format_down = "󰌙 down"
+        format_down = "󰌙 "
 }
 
 disk "/" {
@@ -53,8 +54,6 @@ load {
 # миниторинг оперативной памяти
 memory {
         format = "%used | %available"
-        threshold_degraded = "1G"
-        format_degraded = "MEMORY < %available"
         # доступные переменные:
         # %total, percentage_total
         # %used, percentage_used
@@ -62,7 +61,6 @@ memory {
         # %available, percentage_available
         # %shared, percentage_shared
         format = "󰍛  %used"
-    
         # порог, при котором вывод окрасится в
         # желтый (degraded) или красный (critical)
         # а формат вывода изменится на format_degraded
@@ -82,6 +80,19 @@ cpu_usage {
     # max_threshold, окрас в красный, по умолчанию 95
     # и кастомные форматы для них
     # format_above_degraded_threshold и format_above_threshold
+}
+
+battery all {
+    format = "%status %percentage"
+    last_full_capacity = true
+    format_down = "󱉝 "
+    status_chr = " " # "⚡" статус подзарядки
+    status_bat = "󱊣 " # "🔋" статус в режиме работы от батареи
+    status_unk = "󰂑 " # неизвестный статус
+    status_full = "󰁹 " # статус полного заряда
+    status_idle = "󱠴 "
+    path = "/sys/class/power_supply/BAT%d/uevent"
+    low_threshold = 20
 }
 
 # управление громкостью звука
