изменено:      .config/i3status/config 	изменено:      .config/starship.toml

--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -12,8 +12,8 @@ general {
         output_format = "i3bar" # формат вывода, устанавливаем i3bar (JSON)
 }
 
-order += "wireless _first_"
-order += "ethernet _first_"
+# order += "wireless _first_"
+# order += "ethernet _first_"
 # order += "disk /"
 # order += "load"
 # order += "memory"
