изменено:      .bash.d/aliases.sh 	изменено:      .config/fish/conf.d/puffer_fish_key_bindings.fish 	изменено:      .config/fish/config.fish 	изменено:      .config/fish/fish_variables 	изменено:      .config/fish/functions/_puffer_fish_expand_bang.fish 	удалено:       .config/fish/functions/_puffer_fish_expand_dots.fish 	удалено:       .config/fish/functions/_puffer_fish_expand_lastarg.fish 	изменено:      .config/i3/config 	изменено:      .config/i3status/config 	удалено:       .config/luakit/rc.lua 	удалено:       .config/luakit/theme.lua 	удалено:       .config/luakit/userconf.lua 	изменено:      .config/picom/picom.conf 	изменено:      .config/starship.toml 	изменено:      .tmux.conf

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -325,8 +325,8 @@ assign [instance="^(?i)libreoffice|^(?i)soffice"] $ws9
 for_window [class="(?i)yad.*|^(?i)steam.*|^(?i)port-.*|^(?i)lgc.*"] floating enable, focus
 # for_window [class="URxvt" instance="^spaceterm$"] floating enable, border normal
 # for_window [class="firefox" instance="^mail.google.com$"] floating enable, focus
-for_window [class="(?i)zen"] border none, floating enable, focus, move position center
-for_window [class="(?i)yandex.*"] floating enable, focus, move position center
+for_window [class="(?i)firefox"] focus
+for_window [class="(?i)yandex.*"] focus
 for_window [class="(?i)luakit"] border none, floating enable, move position center
 for_window [class="(?i)telegram"] floating enable
 for_window [class="(?i)galculator"] floating enable, resize set 680 280, move position center
