--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -349,7 +349,8 @@ rules: ({
 },
 { 
   match = "class_g *?= 'yandex' || "
-          "class_g = 'zen' && argb";
+          "class_g = 'zen' && argb || "
+          "class_g = 'firefox' && argb";
   blur-background = false;
   shadow = false;
   opacity = 1;
