--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,16 +11,19 @@ bind r source-file ~/.tmux.conf
 # Set new prefix
 # set -g prefix C-a
 
+# Set terminal options
+# set-option -g default-terminal "screen-256color"      # Включить 256 цветов в терминале
+set -ga terminal-overrides ',*:Tc'                    # Включить TrueColors
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # Поддержка изменения формы курсора
+set -g default-terminal "tmux-256color"
+set -g terminal-overrides ",xterm-256color:Tc"
+set -as terminal-features ",kitty*:RGB"
+
 # Start window and pane at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
-
-# Set terminal options
-set -g default-terminal "tmux-256color"
-set -g terminal-overrides ",xterm-256color:Tc"
-set -as terminal-features ",alacritty*:RGB"
 
 # Set default shell
 set -g default-shell "/bin/fish"
@@ -36,6 +39,40 @@ bind % split-window -h -c "#{pane_current_path}"
 
 set -g @t-fzf-prompt '  '
 
+#######################
+### СПИСОК ПЛАГИНОВ ###
+#######################
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'                         # Менеджер плагинов
+set -g @plugin 'tmux-plugins/tmux-sensible'               # Оптимальные настройки по умолчанию для tmux
+set -g @plugin 'joshmedeski/t-smart-tmux-session-manager' #
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'       #
+set -g @plugin 'catppuccin/tmux'                          # Тема Catppuccin
+# set -g @plugin "arcticicestudio/nord-tmux"                # Тема Nord
+# set -g @plugin 'omerxx/tmux-floax'
+
+##########################
+### НАСТРОЙКИ ПЛАГИНОВ ###
+##########################
+
+# Catppuccin theme
+# 
+set -g @catppuccin_flavor "macchiato" # latte, frappe, macchiato or mocha
+set -g @catppuccin_pane_left_separator ""
+set -g @catppuccin_pane_right_separator " "
+set -g @catppuccin_pane_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+# set -g @catppuccin_status_modules_right "directory session"
+# set -g @catppuccin_status_left_separator  " "
+# set -g @catppuccin_status_right_separator ""
+# set -g @catppuccin_status_fill "icon"
+# set -g @catppuccin_status_connect_separator "no"
+# set -g @catppuccin_directory_text "#{pane_current_path}"
+#
 # settings tmux-prefix-highlight
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_show_sync_prompt 'on'
@@ -50,33 +87,7 @@ set -g @prefix_highlight_prefix_prompt 'Wait'
 set -g @prefix_highlight_copy_prompt 'Copy'
 set -g @prefix_highlight_sync_prompt 'Sync'
 
-#
-# Catppuccin theme
-# 
-set -g @catppuccin_flavour 'frappe'
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_status_modules_right "directory session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{pane_current_path}"
-
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-# set -g @plugin 'catppuccin/tmux'
-# set -g @plugin 'omerxx/tmux-floax'
+# settings floax plugin
 # set -g @floax-width '80%'
 # set -g @floax-height '80%'
 # set -g @floax-border 'rounded'
@@ -84,5 +95,15 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # set -g @floax-text-color 'blue'
 # set -g @floax-bind 'p'
 # set -g @floax-change-path 'false'
-set -g @plugin "arcticicestudio/nord-tmux"
+
+
+# Убедитесь, что плагин TPM установлен
+if "test ! -d ~/.tmux/plugins/tpm" \
+    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
+
+# Автоустановка других плагинов на новом компьютере
+run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/bin/install_plugins'
+
+# Инициализация TPM (сохраняйте эту строку в самом низу tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
